# oarfish

./: .gitignore  404.html  CHANGELOG.md  Cargo.toml  Cargo.toml.cs_orig  README.md  build.rs  dist-workspace.toml  index.html  mkdocs.yml
.github/workflows/: ci.yaml  deploy-docs.yml  publish-crates-io.yml
accuracy-refinement-2026-07-23/: index.html
adaptive-coverage-evaluation-2026-07-19/: index.html
benchmarks/: coverage_ablation_manifest.tsv  coverage_default_public_manifest.tsv  coverage_outer_holdouts.tsv  longbench_coverage_panel.tsv  pacbio_250k_manifest.tsv  pacbio_recent_suite.tsv
competing-risk-degradation-evaluation-2026-07-20/: index.html
coverage-component-ablation-2026-07-20/: index.html
coverage-default-benchmark-expansion-2026-07-20/: index.html
coverage-evaluation-2026-07-19/: index.html
coverage-next-round-2026-07-21/: index.html
coverage-outer-validation-2026-07-19/: index.html
coverage-profile-refinement-2026-07-21/: index.html
coverage-signal-review-2026-07-21/: index.html
degradation-kernel-challengers-2026-07-20/: index.html
degradation-model-evaluation-2026-07-19/: index.html
docs/: accuracy-refinement-2026-07-23.md  adaptive-coverage-evaluation-2026-07-19.md  competing-risk-degradation-evaluation-2026-07-20.md  coverage-component-ablation-2026-07-20.md  coverage-default-benchmark-expansion-2026-07-20.md  coverage-evaluation-2026-07-19.md  coverage-next-round-2026-07-21.md  coverage-outer-validation-2026-07-19.md  coverage-profile-refinement-2026-07-21.md  coverage-signal-review-2026-07-21.md  degradation-kernel-challengers-2026-07-20.md  degradation-model-evaluation-2026-07-19.md  evaluation-results-2026-07-18.md  evaluation.md  hybrid-evaluation-2026-07-19.md  index.md  kinnex-coverage-refinement-and-em-2026-07-20.md  kinnex-fig2-coverage-benchmark-2026-07-20.md  longbench-coverage-evaluation-2026-07-19.md  pacbio-physical-endpoint-2026-07-21.md  rank-preserving-inference-2026-07-22.md  runtime-profile-optimization-2026-07-21.md  single-sample-inference-refinement-2026-07-22.md
evaluation/: index.html
evaluation-results-2026-07-18/: index.html
hybrid-evaluation-2026-07-19/: index.html
kinnex-coverage-refinement-and-em-2026-07-20/: index.html
kinnex-fig2-coverage-benchmark-2026-07-20/: index.html
longbench-coverage-evaluation-2026-07-19/: index.html
pacbio-physical-endpoint-2026-07-21/: index.html
rank-preserving-inference-2026-07-22/: index.html
runtime-profile-optimization-2026-07-21/: index.html
scripts/: align_bambu_spikein_samples.sh  analyze_alignment_coverage_signals.py  analyze_coverage_signals.py  assess_pacbio_endpoint_calibration.py  bambu_sirv_eval.py  eval_sim.py  evaluate_kinnex_fig2.py  evaluate_longbench_panel.py  evaluate_pacbio_creation_guard.py  evaluate_pair.py  evaluate_quant.py  evaluate_sirv_mixture.py  extract_gtf_transcripts.py  extract_sirv_concentrations.py  extract_true_counts.sh  fastq_head.py  justfile  quant.conf  quant_bambu_spikein_samples.sh  quant_bambu_spikein_samples_nanocount.sh  quantify_bambu_samples.nf  quantify_nanocount_sequin_samples.nf  quantify_nanocount_sirv_samples.nf  run_coverage_ablation.py  run_coverage_default_benchmark.py  run_coverage_panel.sh  run_kinnex_fig2_benchmark.py  salmon_quant_truth.py  sequin_eval.py  sirv_e0_truth.py  sirv_eval.py  truth_from_fastq_names.py
search/: search_index.json
single-sample-inference-refinement-2026-07-22/: index.html
src/: Makefile  alignment_parser.rs  assignment.rs  binomial_continuous.rs  bootstrap.rs  bulk.rs  common_functions.rs  em.rs  em_accel.rs  entropy_distribution.rs  gibbs_sampler.rs  kde_prob.rs  lander_waterman_prob.rs  main.rs  maintest.rs  mlpack_kde_wrapper.cpp  mlpack_kde_wrapper.h  multinomial_prob.rs  nocoverage_prob.rs  poisson_prob.rs  prog_opts.rs  single_cell.rs  uniform_prob.rs  util.rs  variables.rs
src/assignment/: annealing_em.rs  connected_components.rs  greedy.rs  min_cost_flow.rs
src/test/: test.cpp  test_rmat  test_rmat.cpp
src/util/: 2D_kde.py  2D_kde_function.py  aligner.rs  alignment_calibration.rs  aux_counts.rs  binomial_probability.rs  censoring_probability.rs  collapsed_gibbs_sampler.rs  constants.rs  count_function.rs  coverage.rs  degradation_probability.rs  digest_utils.rs  dominance_pruning.rs  endpoint_probability.rs  file_utils.rs  hybrid_probability.rs  kde_function.rs  kde_utils.rs  logistic_probability.rs  mapper.rs  mm_utils.rs  normalize_probability.rs  oarfish_types.rs  pacbio_endpoint_probability.rs  parquet_utils.rs  probs.rs  projection.rs  read_function.rs  write_function.rs
test_data/: SIRV_isoforms_multi-fasta-annotation_C_170612a.gtf  SIRV_isoforms_multi-fasta-annotation_I_170612a.gtf  SIRV_isoforms_multi-fasta-annotation_O_170612a.gtf  TableS3_S4_Sequin_counts_and_diff_expression.xlsx  molar_concentrations.xlsx  rnasequin_isoforms_2.4.tsv
