[package]
name = "oarfish"
version = "0.6.1"
edition = "2021"
authors = [
  "Zahra Zare Jousheghani <zzare@umd.edu>",
  "Noor Pratap Singh <npsingh@umd.edu>",
  "Rob Patro <rob@cs.umd.edu>",
]
description = "A fast, accurate and versatile tool for long-read transcript quantification."
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/COMBINE-lab/oarfish"
homepage = "https://COMBINE-lab.github.io/oarfish"
include = [
  "/src/*.rs",
  "/src/util/*.rs",
  "/Cargo.toml",
  "/Cargo.lock",
  "/README.md",
  "/LICENSE",
]
keywords = ["RNA-seq", "quantification", "long-read", "transcriptomics"]
categories = ["command-line-utilities", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
seqcol_rs = { git = "https://github.com/COMBINE-lab/seqcol_rs", branch = "dev", version = "0.1.0" }
anyhow = "1.0.86"
bio-types = { version = "1.0.4", features = ["serde"] }
clap = { version = "4.5.16", features = ["derive"] }
noodles-bam = "0.66.0"
noodles-sam = "0.63.0"
num-format = "0.4.4"
tabled = "0.16.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
typed-builder = "0.20.0"
rayon = "1.10"
statrs = "0.17"
csv = "1.3"
serde = { version = "1", features = ["derive"] }
itertools = "0.13.0"
serde_json = "1.0.127"
path-tools = "0.1.0"
atomic_float = "1.0.0"
rand = "0.8.5"
arrow2 = { version = "0.18.0", features = [
  "io_parquet",
  "io_parquet_gzip",
  "io_parquet_zstd",
  "io_parquet_snappy",
] }
kders = { git = "https://github.com/COMBINE-lab/kde-rs.git", branch = "dev", version = "0.1.0" }
noodles-bgzf = { version = "0.32.0" }
crossbeam = { version = "0.8.4", features = [
  "crossbeam-queue",
  "crossbeam-channel",
] }
sprs = "0.11.1"
minimap2-sys = { version = "0.1.19" }
# rely on minimap2-temp until upstream version is pushed
minimap2-temp = { version = "0.1.31" }
# alternative sources for dev
#git = "https://github.com/rob-p/minimap2-rs.git", branch = "alignment-score" }
#git = "https://github.com/jguhlin/minimap2-rs.git", branch = "alignment-score" }
needletail = "0.5.1"
indicatif = "0.17.8"

[[bin]]
name = "oarfish"
path = "src/main.rs"

[profile.release]
debug-assertions = false
lto = "thin"
panic = "abort"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.19.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
  "aarch64-unknown-linux-gnu",
  "x86_64-unknown-linux-gnu",
  "aarch64-unknown-linux-musl",
  "x86_64-unknown-linux-musl",
]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false
# Path that installers should place binaries in
install-path = "CARGO_HOME"

[workspace.metadata.dist.github-custom-runners]
aarch64-apple-darwin = "macos-14"
