[package]
name = "oarfish"
version = "0.9.1"
edition = "2024"
rust-version = "1.91"
authors = [
  "Zahra Zare Jousheghani <zzare@umd.edu>",
  "Noor Pratap Singh <npsingh@umd.edu>",
  "Rob Patro <rob@cs.umd.edu>",
]
description = "A fast, accurate and versatile tool for long-read transcript quantification."
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/COMBINE-lab/oarfish"
homepage = "https://COMBINE-lab.github.io/oarfish"
include = [
  "/src/*.rs",
  "/src/util/*.rs",
  "/Cargo.toml",
  "/Cargo.lock",
  "/README.md",
  "/LICENSE",
]
keywords = ["RNA-seq", "quantification", "long-read", "transcriptomics"]
categories = ["command-line-utilities", "science"]

# See more keys and their definitions 
# at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
seqcol_rs = { git = "https://github.com/COMBINE-lab/seqcol_rs", branch = "dev", version = "0.4.1" }
anyhow = "1.0.100"
bstr = "1.12.1"
bio-types = { version = "1.0.4", features = ["serde"] }
clap = { version = "4.5.54", features = ["derive"] }
noodles-bam = "0.85.0"
noodles-sam = "0.81.0"
num-format = "0.4.4"
lz4 = "1.28.1"
either = "1.15.0"
tabled = "0.20.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
typed-builder = "0.23.2"
rayon = "1.11"
statrs = "0.18"
csv = "1.4"
serde = { version = "1", features = ["derive"] }
itertools = "0.14.0"
serde_json = "1.0.149"
path-tools = "0.1.0"
atomic_float = "1.1.0"
sendable-swapvec = "0.4.3"
rand = "0.9.2" #0.8.5"
arrow2 = { version = "0.18.0", features = [
  "io_parquet",
  "io_parquet_gzip",
  "io_parquet_zstd",
  "io_parquet_snappy",
] }
kders = { git = "https://github.com/COMBINE-lab/kde-rs.git", branch = "dev", version = "0.1.1" }
noodles-bgzf = { version = "0.45.0" }
crossbeam = { version = "0.8.4", features = [
  "crossbeam-queue",
  "crossbeam-channel",
] }
sprs = "0.11.4"

# alternative sources for dev
minimap2-sys = { version = "0.1.24" } #, git = "https://github.com/rob-p/minimap2-rs.git", branch = "main" }
minimap2 = { version = "0.1.28" }     # git = "https://github.com/rob-p/minimap2-rs.git", branch = "main" }

needletail = "0.6.3"
indicatif = "0.18.3"
rustc-hash = "2.1.1"
parse-size = "1.1.0"
niffler = "3.0.0"
humantime = "2.3.0"

[[bin]]
name = "oarfish"
path = "src/main.rs"

[profile.release]
debug-assertions = false
lto = "thin"
panic = "abort"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
# don't have linux arm builders on GitHub yet
# aarch64-unknown-linux-gnu = "buildjet-8vcpu-ubuntu-2204-arm"
